# shark

./: CMakeCache.txt  CMakeLists.txt  Makefile  Shark.kdev4  cmake_install.cmake  shark-main.kdev4  shark.kdev4  ship_stereo_shark.inp
.kdev4/: Shark.kdev4  shark.kdev4
boost_tester/: main.cpp
cal_params/cal_params/: CMakeLists.txt  cal_params.kdev4
cal_params/cal_params/.kdev4/: cal_params.kdev4
cal_params/cal_params/src/: main.cpp
cmake/: FindOpenCV.cmake
gcv/: gcv.db  gcv.h  imagecv.cpp  imagecv.h  openglgrabber.cpp  openglgrabber.h
maybeUseful/: fuckParabolas.cpp
rmax/: scene.c  scene.db  scene.h
rmax/ldt/: ldt.cpp  ldt.db  ldt.h
src/: OurLine.cpp  OurLine.h  OurTarget.cpp  OurTarget.h  main.cpp
